# FuSe

./: LICENSE  README.md
octo_digit/: .gitignore  mem_lims.sh  pyproject.toml  requirements.txt  setup.py
octo_digit/eval/: compositional_task.py  decode_config.py  decode_language.py  eval_config.py  eval_requirements.txt  fuse_compositional_task.py  fuse_eval.py  read_eval_logs.py  read_logs_to_csv.py  recursive_dict_print.py  setup.py  utils.py
octo_digit/eval/envs/: gym_wrappers.py  widowx_env.py
octo_digit/examples/: 02_finetune_new_observation_action.py  03_eval_finetuned.py  04_eval_finetuned_on_robot.py  07_sanity_finetune.py  10_test_resnet.ipynb  archive_mult_eval.py  check_dataset.py  config_ex.py  curr_lang.txt  curr_multi.txt  eval_config.py  josh_eval_finetuned_on_robot.py  josh_mult_eval.py  josh_plot_inference.py  logged_acs.pkl  recursive_dict_print.py  resnet_model.py  test_paths.txt  test_resnet.ipynb
octo_digit/examples/envs/: old_w_env.py  widowx_env.py
octo_digit/examples/sensors/: record_imu.py  record_mic.py
octo_digit/octo/: setup.py
octo_digit/octo/data/: dataset.py  obs_transforms.py  traj_transforms.py
octo_digit/octo/data/oxe/: oxe_standardization_transforms.py
octo_digit/octo/data/utils/: data_utils.py  (+3 more)
octo_digit/octo/model/: bcz_model.py  bcz_module.py  octo_model.py  octo_module.py  resnet_model.py
octo_digit/octo/utils/: fuse_constants.py  fuse_utils.py  gradcam.py  gym_wrappers.py  logging_utils.py  train_callbacks.py  train_utils.py  typing.py  visualization_lib.py
octo_digit/scripts/: finetune.py  finetune_fuse.py  finetune_fuse_pods.py  finetune_josh.py  finetune_josh_pods.py  finetune_resnet.py  josh_test_dataset.py  save_viz.py  test_mem.py  train.py  train_josh.py  train_josh_pods_bcz.py  viz.ipynb
octo_digit/scripts/configs/: config.py  finetune_config.py  fuse_config.py  josh_finetune_config_no_rephrase_cont_multi_pods.py  josh_single_finetune_config_no_rephrase_cont_multi_pods.py
(+325 files in other folders)
