[project]
name = "octo_digit"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "gym>=0.26",
    "numpy==1.24.3",
    "ml_dtypes==0.2.0",
    "chex==0.1.85",
    "optax==0.1.5",
    "tensorflow_probability==0.23.0",
    "tensorflow==2.15.0",
    "jax==0.4.20",
    "distrax==0.1.5",
    "flax==0.7.5",
    "ml_collections>=0.1.0",
    "tqdm>=4.60.0",
    "absl-py>=0.12.0",
    "wandb>=0.12.14",
    "einops>=0.6.1",
    "imageio>=2.31.1",
    "moviepy>=1.0.3",
    "pre-commit==3.3.3",
    "transformers>=4.34.1",
    "tensorflow_hub>=0.14.0",
    "tensorflow_text>=2.13.0",
    "tensorflow_datasets>=4.9.0",
    "tensorflow_graphics==2021.12.3",
    "dlimp@git+https://github.com/kvablack/dlimp@5edaa4691567873d495633f2708982b42edf1972",
    "plotly>=5.16.1",
    "matplotlib",
    "scipy==1.12.0",
    "funcsigs",
    "opencv-python",
    "pyquaternion",
    "librosa",
    "edgeml @ git+https://github.com/youliangtan/edgeml.git",
    "octo",
    "eval"
]

[project.optional-dependencies]
tpu = [
    "jax[tpu]==0.4.20",
    "libtpu-nightly"
]
gpu = [
    "jax[cuda11_pip]==0.4.20",
]

[tool.uv]
find-links = [
    "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html",
    "https://storage.googleapis.com/jax-releases/libtpu_releases.html",
]
override-dependencies = ["scipy==1.12.0"]
prerelease = "allow"
conflicts = [
    [
        { extra = "tpu" },
        { extra = "gpu" },
    ],
]


[tool.uv.sources]
octo = { path = "./octo", editable = true }
eval = { path = "./eval", editable = true }

[tool.black]
# https://github.ciom/psf/black
line-length = 88
target-version = ["py310"]
exclude = "(.eggs|.git|.hg|.mypy_cache|.nox|.tox|.venv|.svn|_build|buck-out|build|dist)"

[tool.isort]
profile = "black"
line_length = 88
force_sort_within_sections = "True"
order_by_type = "False"
